Add files and changes in index

--- a/ps01/index.html
+++ b/ps01/index.html
@@ -3,11 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>O Mnie</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
 <body>
-    Hello World!
+    <header>
+        <h1><a href="index.html">O Mnie</a></h1>
+        <nav>
+            <ul>
+                <li><a href="artykuły.html">Artykuły</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h3>Miłosz Szymczuk</h3>
+            <p>Politechnika Białostocka</p>
+            <p>Student</p>
+        </section>
+        <section>
+            <b>Zainteresowania</b>
+            <ul>
+                <li>Programowanie</li>
+                <li>Inwestowanie</li>
+                <li>Sporty wodne</li>
+            </ul>
+        </section>
+        <section>
+            <blockquote>
+            Duże chwilę, potrzebuje czasu, aby urosnąć
+            </blockquote>
+        </section>
+    </main>
+    <footer>
+        <p>&copy Miłosz Szymczuk</p>
+    </footer>
 </body>
 </html>
