--- a/ps01/artykuły.html
+++ b/ps01/artykuły.html
@@ -27,6 +27,7 @@
 
            <article id="first-article">
     <h2>Jak programować w JavaScript</h2>
+    <img src="https://picsum.photos/199" alt="random-photo">
     <p>Tworzenie klasy w JavaScript</p>
     <pre><code>
 class Nazwa {
@@ -56,6 +57,7 @@ main();
 
 <article id="second-article">
     <h2>Jak programować w C#</h2>
+    <img src="https://picsum.photos/200" alt="random-photo">
     <p>Tworzenie klasy w C#</p>
     <pre><code>
 class Nazwa {
@@ -87,6 +89,7 @@ class Program {
 
 <article id="third-article">
     <h2>Jak programować w Pythonie</h2>
+    <img src="https://picsum.photos/201" alt="random-photo">
     <p>Tworzenie klasy w Pythonie</p>
     <pre><code>
 class Nazwa:
