--- a/ps01/index.html
+++ b/ps01/index.html
@@ -35,7 +35,13 @@
             <blockquote>
             Duże chwilę, potrzebuje czasu, aby urosnąć
             </blockquote>
+            <figure>
+            <img src="https://picsum.photos/202" alt="random-photo">
+            <figcaption>Przykoładowe zdjęcie</figcaption>
+            </figure>
         </section>
+        <section>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d99052.83753988656!2d23.074092311613075!3d53.127672464063245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471ffc048f41971d%3A0x72317dcc8bf07b2c!2sBia%C5%82ystok!5e1!3m2!1spl!2spl!4v1751326697337!5m2!1spl!2spl" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
     <footer>
         <p>&copy Miłosz Szymczuk</p>
