--- a/ps01/kontakt.html
+++ b/ps01/kontakt.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,14 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
+
 <body>
     <header>
         <h1><a href="kontakt.html">Kontakt</a></h1>
         <nav>
             <ul>
                 <li><a href="index.html">O Mnie</a></li>
-                <li><a href="kontakt.html">Kontakt</a></li>
+                <li><a href="artykuły.html">Artykuły</a></li>
             </ul>
         </nav>
     </header>
@@ -25,17 +27,32 @@
                 <p>Adres: Białystok - Radzymińska 42/10</p>
             </address>
             <p>
-                <h3>Zapraszam do kontaktu w podanych godzinach</h3>
-                <ul>
-                    <li>Pn-Pt: 10:00-18:00</li>
-                    <li>Sob: 12:00-15:00</li>
-                    <li>Ndz: 18:00-19:00</li>
-                </ul>
+            <h3>Zapraszam do kontaktu w podanych godzinach</h3>
+            <ul>
+                <li>Pn-Pt: 10:00-18:00</li>
+                <li>Sob: 12:00-15:00</li>
+                <li>Ndz: 18:00-19:00</li>
+            </ul>
             </p>
+        </section>
+        <section>
+            <form action="https://httpbin.org/post" method="post">
+                <label for="name">Imię i nazwisko <input type="text" id="name"></label><br>
+                <label for="email">Adres e-mail <input type="email" id="email"></label><br>
+                <label for="phone">Numer telefonu <input type="tel" id="phone"></label><br>
+                <label for="birth-date">Data urodzenia <input type="date" id="birth-date"></label><br>
+                <label for="sex">Wybór płci<br>
+                <input type="radio" value="kobieta" id="sex">Kobieta<br>
+                <input type="radio" value="mezczyzna" id="sex">Mężczyzna<br>
+                <input type="radio" value="niepodaje" id="sex">Nie podaję<br></label>
+                <label for="data">Zgoda na przetwarzanie danych <input type="checkbox" id="data"></label><br>
+                
+            </form>
         </section>
     </main>
     <footer>
         <p>&copy Miłosz Szymczuk</p>
     </footer>
 </body>
+
 </html>
