add js, list of objects

--- a/ps06/index.html
+++ b/ps06/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Katolog</title>
+    <title>Katolog Produktów</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Katolog</h1>
+        <h1>Katolog Produktów</h1>
         <form id="form">
             <label for="title"><input type="text" name="title" id="title" placeholder="Tytuł"></label>
             <label for="text"><textarea name="text" id="text" placeholder="Opis"></textarea></label>
